The work of one night

--- a/public/index.html
+++ b/public/index.html
@@ -659,7 +659,7 @@
           </linearGradient>
         </defs></svg
       ><img
-            src="image.png"
+            src="conclusion.png"
             class="w-[665px] h-[665px] absolute left-[93.5px] top-[3901.5px] object-contain"
     />
     </div>
